# django-polls

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  build_docs.sh  fix_git_push.sh  pyproject.toml  setup.cfg  sphinx_inotify_watch.sh  upload_pypi.py
.github/workflows/: publish.yml  python-publish.yml  python-publish.yml.disabled  test.yml
django_polls/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
django_polls/migrations/: 0001_initial.py  0002_question_author_vote.py
django_polls/static/polls/: style.css
django_polls/templates/polls/: base.html  detail.html  index.html  login.html  profile.html  register.html  results.html  results.html.original
docs/: deployment.rst  index.rst
docs/source/: conf.py  index.rst  project-structure.rst  project_tree.txt  usage-guide.rst
docs/zh/: index.rst  installation.rst  usage.rst
mysite/: settings.py  urls.py
templates/admin/: base_site.html
