[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polls"
version = "0.2.2"
dependencies = [
    "django>=3.2,<5.0",
]
description = "A Django app to conduct web-based polls."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">= 3.8"
authors = [
    {name = "meilaesop", email = "meilaesop@gmail.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/meilaesop/django-polls"
Documentation = "https://github.com/meilaesop/django-polls#readme"
Issues = "https://github.com/meilaesop/django-polls/issues"
Source = "https://github.com/meilaesop/django-polls"
[tool.setuptools]
packages = ["django_polls"]
include-package-data = true

[tool.setuptools.package-data]
"django_polls" = [
    "static/polls/*",
    "templates/polls/*",
    "templates/polls/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.pyc",
    "*__pycache__/*",
    "build/*",
    "dist/*",
    "docs/*",
    "mysite/*",
    "tests/*",
]
