[metadata]
name = django-polls
version = 0.1.0
author = meilaesop
author_email = meilaesop@gmail.com
description = A beautiful and functional Django voting application
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/meilaesop/django-polls
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2,<5.0
include_package_data = True

[options.packages.find]
exclude = 
    tests*
    examples*
    docs*
    build*
